--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -9,9 +9,12 @@
 	"createredirect": "{{doc-special|CreateRedirect}}",
 	"createredirect-desc": "{{desc|name=Create Redirect|url=https://www.mediawiki.org/wiki/Extension:CreateRedirect}}",
 	"createredirect-error": "Unused at this time.\n\nUsed as error message.",
+	"createredirect-enable-multiline": "Label for button that allows to enter multiple titles.",
 	"createredirect-instructions": "Used as instructions message.\n\nThis message is followed by the Redirect form.",
+	"createredirect-invalid-title": "Used as error message when incorrect title is entered.",
 	"createredirect-page-title": "Used as label for Original Title input box.\n{{Identical|Page title}}",
 	"createredirect-redirect-done": "This message indicates the redirect $2 (from the page $1) has been created successfully.\n\nParameters:\n* $1 - original title\n* $2 - redirect title",
 	"createredirect-redirect-to": "Used as label for Redirect Title input box.",
-	"createredirect-save": "Used as Submit button text.\n{{Identical|Save page}}"
+	"createredirect-save": "Used as Submit button text.\n{{Identical|Save page}}",
+	"createredirect-would-overwrite": "Used as error message when page $2 already exists (user is attempting to overwrite it with redirect to $1).\n\nParameters:\n* $1 - original title\n* $2 - redirect title"
 }
