--- a/i18n/szy.json
+++ b/i18n/szy.json
@@ -1,6 +1,8 @@
 {
 	"@metadata": {
-		"authors": []
+		"authors": [
+			"Tokoabibi"
+		]
 	},
 	"createredirect-redirect-to": "miliyaw patatuzu’ i:"
 }
